<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.lachewendy.rpl_androidv1.DetalleEntradaActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero_orden" />

        <TextView
            android:id="@+id/txtNumOrdenEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:text="324567" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_pedido"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtFechaPedidoEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="324567"
            android:textSize="20sp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidades_totales"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtUnidadesTotalesEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="324567"
            android:textSize="20sp"/>



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almacen"
        android:layout_marginTop="26dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtAlmacenEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="JKSKJFDJKFDSJKDF JKAEGKJGFK"
        android:textSize="20sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/procedencia"
        android:textSize="20sp"/>




    <TextView
        android:id="@+id/txtProcedenciaEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="SDGHGFKUTY ERAFH RJU "
        android:textSize="20sp"/>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDarEntrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ver_refacciones"/>

        <Button
            android:id="@+id/btnCancelarEntrada"
            android:layout_width="120dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>
    </LinearLayout>

</LinearLayout>
