<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context="com.example.lachewendy.rpl_androidv1.DeterminarRecoleccionFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeOpciones"
            android:visibility="visible">
           <Button
               android:id="@+id/btnServicio"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:text="@string/servicio_rpl"
               android:textColor="#fff"
               android:background="@drawable/border_button"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btnEscanear"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/escanear_orden"
                android:textColor="#fff"
                android:background="@drawable/border_button"
                android:layout_below="@+id/btnServicio"
                android:layout_alignLeft="@+id/btnServicio"
                android:layout_alignStart="@+id/btnServicio" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeEscanear"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escanear_orden_codigo"
            android:id="@+id/textView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNumOrden"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="number"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp" />

        <TextView
            android:id="@+id/txtErrorMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNumOrden"
            android:text="jkhsdfkfdjhkfds"
            android:visibility="gone"
            android:textColor="@color/colorPrimaryDark"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:text="@string/cancelar"
            android:id="@+id/btnCancelar"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_below="@+id/txtErrorMensaje"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:text="@string/confirmar"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_alignTop="@+id/btnCancelar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


</RelativeLayout>
