<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="3">

    <include
        android:id="@+id/toolbarRecepcion"
        layout="@layout/toolbar_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/linearEntradaUno"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor"
                android:id="@+id/imageView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada_uno"
                android:textColor="@color/blanco"
                android:textSize="@dimen/letra_entrada_2"
                android:gravity="center"
                android:id="@+id/textView9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEntradaDos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor"
                android:layout_centerVertical="true"
                android:id="@+id/imageView7" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada_dos"
                android:textColor="@color/blanco"
                android:textSize="@dimen/letra_entrada_2"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/linearEntradaTres"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/imageView6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada_tres"
                android:textColor="@color/blanco"
                android:textSize="@dimen/letra_entrada"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView6"
                android:layout_toEndOf="@+id/imageView6"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearEntradaCuatro"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor"
                android:id="@+id/imageView8" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada_cuatro"
                android:textColor="@color/blanco"
                android:textSize="@dimen/letra_entrada"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/linearEntradaCinco"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor"
                android:id="@+id/imageView9" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada_cinco"
                android:textColor="@color/blanco"
                android:textSize="@dimen/letra_entrada_2"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearEntradaSeis"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monitor"
                android:id="@+id/imageView10" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada_seis"
                android:textColor="@color/blanco"
                android:textSize="@dimen/letra_entrada"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</LinearLayout>
