<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo">
    <RelativeLayout
        android:id="@+id/relativeLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logoado"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsuario"
                android:hint="@string/phUs"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/txtOlvidastePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidar_pass"
            android:textSize="15sp"
            android:layout_below="@+id/text_pass_layout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INICIAR SESIÓN"
            android:textSize="20sp"
            android:textColor="#fff"
            android:padding="15dp"
            android:id="@+id/btnInicioSesion"
            android:background="@drawable/border_button"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/text_pass_layout"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/txtPasssword"
            android:hint="@string/phContra"
            android:maxLines="1"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:visibility="visible"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
